--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -53,8 +53,7 @@ jobs:
           path: |
             .root
             packages/**/dist/
-            packages/bindings/npm/*/oboe.node
-            packages/bindings/npm/*/metrics.node
+            packages/bindings/npm/*/*.node
             packages/bindings/npm/*/liboboe.so
           retention-days: 1
 
@@ -106,10 +105,12 @@ jobs:
             16-ubi8
             16-ubuntu18.04
             18-alpine
+            18-amazonlinux
             18-debian
             18-ubi
             18-ubuntu
             20-alpine
+            20-amazonlinux
             20-debian
             20-ubi
             20-ubuntu
@@ -136,12 +137,12 @@ jobs:
           - 16-ubi8
           - 16-ubuntu18.04
           - 18-alpine
-          # - 18-amazonlinux - https://github.com/amazonlinux/amazon-linux-2023/issues/365
+          - 18-amazonlinux
           - 18-debian
           - 18-ubi
           - 18-ubuntu
           - 20-alpine
-          # - 20-amazonlinux - https://github.com/amazonlinux/amazon-linux-2023/issues/365
+          - 20-amazonlinux
           - 20-debian
           - 20-ubi
           - 20-ubuntu
