--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -7,6 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       packages: write
+    env:
+      YARN_ENABLE_IMMUTABLE_INSTALLS: "false"
+      YARN_NPM_AUTH_TOKEN: ${{ github.token }}
+      YARN_NPM_PUBLISH_REGISTRY: https://npm.pkg.github.com
 
     steps:
       - uses: actions/checkout@v3
@@ -40,6 +44,3 @@ jobs:
 
       - run: yarn version:testing
       - run: yarn publish
-        env:
-          YARN_NPM_AUTH_TOKEN: ${{ github.token }}
-          YARN_NPM_PUBLISH_REGISTRY: https://npm.pkg.github.com
