--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -41,6 +41,7 @@ jobs:
           git grep -lz -G 'solarwinds-apm[^-]' | xargs -0 sed -rie 's:solarwinds-apm([^-]):@${{ github.repository_owner }}/solarwinds-apm\1:g'
           rm yarn.lock
           yarn install
+          yarn lint:fix
 
       - run: yarn version:testing
       - run: yarn publish
