reorder testing publish workflow to speed it up

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -40,8 +40,8 @@ jobs:
           git grep -lz '@solarwinds-apm/' | xargs -0 sed -ie 's:@solarwinds-apm/:@${{ github.repository_owner }}/solarwinds-apm-:g'
           git grep -lz -G 'solarwinds-apm[^-]' | xargs -0 sed -rie 's:solarwinds-apm([^-]):@${{ github.repository_owner }}/solarwinds-apm\1:g'
           rm yarn.lock
+          yarn version:testing
           yarn install
           yarn lint:fix
 
-      - run: yarn version:testing
       - run: yarn publish
