--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,6 @@
   "recommendations": [
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
-    "xaver.clang-format"
+    "llvm-vs-code-extensions.vscode-clangd"
   ]
 }
