--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,37 @@
     "**/.yarn": true
   },
   "eslint.experimental.useFlatConfig": true,
-  "eslint.workingDirectories": ["./packages/*/", "./examples", "./scripts"]
+  "eslint.workingDirectories": [
+    { "pattern": "./packages/*" },
+    "./examples",
+    "./scripts"
+  ],
+  "C_Cpp.intelliSenseEngine": "disabled",
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[javascriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[yaml]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[markdown]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[c]": {
+    "editor.defaultFormatter": "llvm-vs-code-extensions.vscode-clangd"
+  },
+  "[cpp]": {
+    "editor.defaultFormatter": "llvm-vs-code-extensions.vscode-clangd"
+  }
 }
