--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -87,6 +87,11 @@ jobs:
       matrix: ${{ steps.launch.outputs.matrix }}
     runs-on: ubuntu-latest
     steps:
+      - uses: getsentry/action-github-app-token@v2
+        id: github-token
+        with:
+          app_id: ${{ vars.APPLICATION_ID }}
+          private_key: ${{ secrets.APPLICATION_PRIVATE_KEY }}
       - uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.CI_ACCESS_KEY_ID }}
@@ -97,7 +102,7 @@ jobs:
         uses: solarwindscloud/ec2-runner-action@main
         with:
           action: launch
-          github-token: ${{ secrets.CI_GITHUB_TOKEN }}
+          github-token: ${{ steps.github-token.outputs.token }}
           matrix: |
             16-alpine3.15
             16-amazonlinux2
@@ -190,6 +195,11 @@ jobs:
       - tests
     runs-on: ubuntu-latest
     steps:
+      - uses: getsentry/action-github-app-token@v2
+        id: github-token
+        with:
+          app_id: ${{ vars.APPLICATION_ID }}
+          private_key: ${{ secrets.APPLICATION_PRIVATE_KEY }}
       - uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.CI_ACCESS_KEY_ID }}
@@ -198,5 +208,5 @@ jobs:
       - uses: solarwindscloud/ec2-runner-action@main
         with:
           action: terminate
-          github-token: ${{ secrets.CI_GITHUB_TOKEN }}
+          github-token: ${{ steps.github-token.outputs.token }}
           matrix: ${{ needs.launch-arm64.outputs.matrix }}
