move lambda ci here

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,8 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.version.outputs.version }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -17,3 +19,17 @@ jobs:
       - run: yarn publish
         env:
           YARN_NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Export version
+        id: version
+        run: |
+          VERSION=$(cat packages/solarwinds-apm/package.json | jq -r '.version')
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+
+  lambda:
+    needs: publish
+    uses: ./.github/workflows/lambda.yml
+    with:
+      type: testing
+      version: ${{ needs.publish.outputs.version }}
+    secrets: inherit
