--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "turbo run build --continue",
     "docker": "node scripts/docker.js",
     "example": "node scripts/example.js",
+    "lambda": "node scripts/lambda.js",
     "lint": "prettier --check *.json *.md .github && turbo run lint --continue",
     "lint:fix": "prettier --write *.json *.md .github && turbo run lint:fix --continue",
     "publish": "turbo run build && turbo run lint && turbo run publish",
