--- a/scripts/package.json
+++ b/scripts/package.json
@@ -10,7 +10,9 @@
   },
   "devDependencies": {
     "@solarwinds-apm/eslint-config": "workspace:^",
+    "archiver": "^6.0.1",
     "eslint": "^8.50.0",
+    "ora": "^5.4.1",
     "prettier": "^3.0.3"
   }
 }
