--- a/lambda/package.json
+++ b/lambda/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@solarwinds-apm/lambda-shim",
   "private": true,
-  "packageManager": "yarn@4.0.2",
+  "packageManager": "yarn@4.1.0",
   "dependencies": {
-    "@opentelemetry/api": "^1.3.0",
-    "@opentelemetry/exporter-metrics-otlp-grpc": "^0.46.0",
-    "@opentelemetry/exporter-trace-otlp-grpc": "^0.46.0",
-    "{{name}}": "{{version}}"
+    "{{name}}": "{{version}}",
+    "@opentelemetry/api": "{{api-version}}",
+    "@opentelemetry/exporter-trace-otlp-grpc": "{{exporters-version}}",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "{{exporters-version}}"
   }
 }
