--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -48,6 +48,7 @@ updates:
         patterns:
           - "eslint"
           - "prettier"
+          - "typescript-eslint"
           - "@eslint/*"
           - "eslint-*"
           - "@typescript-eslint/*"
