--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,6 @@ jobs:
     needs: publish
     uses: ./.github/workflows/lambda.yml
     with:
-      type: testing
+      type: production
       version: ${{ needs.publish.outputs.version }}
     secrets: inherit
