--- a/examples/next-prisma/package.json
+++ b/examples/next-prisma/package.json
@@ -21,6 +21,6 @@
     "eslint": "^8.50.0",
     "eslint-config-next": "^14.0.3",
     "prisma": "^5.4.1",
-    "typescript": "^5.2.2"
+    "typescript": "~5.4.4"
   }
 }
