--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "husky": "^9.0.11",
     "prettier": "^3.0.3",
     "turbo": "^1.10.15",
-    "typescript": "^5.2.2"
+    "typescript": "~5.4.4"
   }
 }
