--- a/packages/bindings/package.json
+++ b/packages/bindings/package.json
@@ -55,7 +55,7 @@
     "eslint": "^8.50.0",
     "node-addon-api": "^7.0.0",
     "prettier": "^3.0.3",
-    "typescript": "^5.2.2",
+    "typescript": "~5.4.4",
     "zig-build": "^0.3.0"
   },
   "engines": {
