--- a/packages/instrumentations/package.json
+++ b/packages/instrumentations/package.json
@@ -95,7 +95,7 @@
     "prettier": "^3.0.3",
     "rollup": "^4.3.0",
     "semver": "^7.5.4",
-    "typescript": "^5.2.2"
+    "typescript": "~5.4.4"
   },
   "engines": {
     "node": ">=16.13.0"
