--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -45,7 +45,7 @@
     "eslint": "^8.50.0",
     "prettier": "^3.0.3",
     "rollup": "^4.3.0",
-    "typescript": "^5.2.2"
+    "typescript": "~5.4.4"
   },
   "engines": {
     "node": ">=16.13.0"
