--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -77,7 +77,7 @@
     "@types/semver": "^7.5.3",
     "eslint": "^8.50.0",
     "prettier": "^3.0.3",
-    "typescript": "^5.2.2"
+    "typescript": "~5.4.4"
   },
   "engines": {
     "node": ">=16.13.0"
