publish with provenance using npm publish

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -6,6 +6,7 @@ initScope: "@solarwinds-apm"
 initFields:
   license: Apache-2.0
   publishConfig:
+    access: public
     provenance: true
 
 nodeLinker: node-modules
