--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -11,8 +11,6 @@ jobs:
       version: ${{ steps.version.outputs.version }}
     env:
       YARN_ENABLE_IMMUTABLE_INSTALLS: "false"
-      YARN_NPM_AUTH_TOKEN: ${{ github.token }}
-      YARN_NPM_PUBLISH_REGISTRY: https://npm.pkg.github.com
 
     steps:
       - uses: actions/checkout@v4
@@ -22,6 +20,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+          registry-url: https://npm.pkg.github.com
       - run: corepack enable
 
       - uses: actions/cache@v4
@@ -49,6 +48,8 @@ jobs:
           yarn install
 
       - run: yarn publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Export version
         id: version
