--- a/packages/sampling/package.json
+++ b/packages/sampling/package.json
@@ -36,7 +36,19 @@
     "release": "node ../../scripts/publish.js",
     "test": "swtest -p test/tsconfig.json -c src"
   },
+  "dependencies": {
+    "@opentelemetry/sdk-trace-base": "~1.23.0"
+  },
+  "peerDependencies": {
+    "@opentelemetry/api": "^1.3.0"
+  },
+  "peerDependenciesMeta": {
+    "@opentelemetry/api": {
+      "optional": false
+    }
+  },
   "devDependencies": {
+    "@opentelemetry/api": "^1.3.0",
     "@solarwinds-apm/eslint-config": "workspace:^",
     "@solarwinds-apm/rollup-config": "workspace:^",
     "@solarwinds-apm/test": "workspace:^",
