--- a/packages/sampling/package.json
+++ b/packages/sampling/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@opentelemetry/api": "^1.3.0",
     "@solarwinds-apm/eslint-config": "workspace:^",
+    "@solarwinds-apm/lazy": "workspace:^",
     "@solarwinds-apm/rollup-config": "workspace:^",
     "@solarwinds-apm/test": "workspace:^",
     "@types/node": "^16.13.0",
