--- a/packages/sampling/package.json
+++ b/packages/sampling/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@opentelemetry/api": "^1.3.0",
+    "@opentelemetry/sdk-metrics": "~1.23.0",
     "@solarwinds-apm/eslint-config": "workspace:^",
     "@solarwinds-apm/lazy": "workspace:^",
     "@solarwinds-apm/rollup-config": "workspace:^",
