--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -82,57 +82,11 @@ jobs:
 
       - run: yarn version check
 
-  launch-arm64:
-    if: github.event_name == 'pull_request'
-    outputs:
-      matrix: ${{ steps.launch.outputs.matrix }}
-    permissions:
-      id-token: write
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: getsentry/action-github-app-token@v3
-        id: github-token
-        with:
-          app_id: ${{ vars.APPLICATION_ID }}
-          private_key: ${{ secrets.APPLICATION_PRIVATE_KEY }}
-      - uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.EC2_RUNNER_ARN }}
-          aws-region: us-east-1
-
-      - id: launch
-        uses: solarwinds/ec2-runner-action@main
-        with:
-          action: launch
-          github-token: ${{ steps.github-token.outputs.token }}
-          matrix: |
-            16-amazonlinux2023
-            16-debian10
-            16-ubi8
-            16-ubuntu20.04
-            18-amazonlinux
-            18-debian
-            18-ubi
-            18-ubuntu
-            20-amazonlinux
-            20-debian
-            20-ubi
-            20-ubuntu
-          runner-user: github
-          runner-directory: /gh
-          instance-type: t4g.medium
-          ami-name: gha-arm64-ubuntu22-.*
-          ami-owner: "858939916050"
-          subnet-id: subnet-0fd499f8a50e41807
-          security-group-ids: sg-0fd8d8cd6effda4a5
-
   tests:
     if: github.event_name == 'pull_request'
     needs:
       - checks
-      - launch-arm64
-    runs-on: ${{ matrix.arch == 'arm64' && fromJSON(needs.launch-arm64.outputs.matrix)[matrix.image].label || 'ubuntu-latest' }}
+    runs-on: ${{ matrix.arch == 'arm64' && fromJSON('{"group":"apm-arm-runner"}') || 'ubuntu-latest' }}
     strategy:
       matrix:
         image:
@@ -193,28 +147,3 @@ jobs:
         env:
           SW_APM_COLLECTOR: ${{ secrets.SW_APM_COLLECTOR }}
           SW_APM_SERVICE_KEY: ${{ secrets.SW_APM_SERVICE_KEY }}
-
-  terminate-arm64:
-    if: always() && github.event_name == 'pull_request'
-    needs:
-      - launch-arm64
-      - tests
-    permissions:
-      id-token: write
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: getsentry/action-github-app-token@v3
-        id: github-token
-        with:
-          app_id: ${{ vars.APPLICATION_ID }}
-          private_key: ${{ secrets.APPLICATION_PRIVATE_KEY }}
-      - uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.EC2_RUNNER_ARN }}
-          aws-region: us-east-1
-      - uses: solarwinds/ec2-runner-action@main
-        with:
-          action: terminate
-          github-token: ${{ steps.github-token.outputs.token }}
-          matrix: ${{ needs.launch-arm64.outputs.matrix }}
