--- a/.github/workflows/images.yml
+++ b/.github/workflows/images.yml
@@ -28,6 +28,11 @@ jobs:
           - 20-debian
           - 20-ubi
           - 20-ubuntu
+          - 22-alpine
+          - 22-amazonlinux
+          - 22-debian
+          - 22-ubi
+          - 22-ubuntu
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
