--- a/lambda/package.json
+++ b/lambda/package.json
@@ -6,6 +6,7 @@
     "{{name}}": "{{version}}",
     "@opentelemetry/api": "{{api-version}}",
     "@opentelemetry/exporter-trace-otlp-grpc": "{{exporters-version}}",
-    "@opentelemetry/exporter-metrics-otlp-grpc": "{{exporters-version}}"
+    "@opentelemetry/exporter-metrics-otlp-grpc": "{{exporters-version}}",
+    "semver": "^7"
   }
 }
