--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -177,6 +177,7 @@ jobs:
             yarn-
 
       - run: yarn install --immutable
+        continue-on-error: true
       - run: yarn test --only
         env:
           SW_APM_COLLECTOR: ${{ secrets.SW_APM_COLLECTOR }}
